--- a/TODO
+++ b/TODO
@@ -21,3 +21,6 @@
 
 # gosa.backend.plugins.user.filter
 - ImageProcessor fixed + testen
+
+#gosa.backend.object.(comparator|types).(acl_set|acl_roles)
+- code nahezu indentisch, nur das bei den sets auch der 'members'-key im Dict berücksichtigt wird => prüfen ob man das vereinheitliche kann
