--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+# Auth via digest
+
 # Comparatoren (gosa.backend.objects.comparator)
 - Konstruktor wird ein Object übergeben, dieses wird aber nirgendwo genutzt
 - einige der Parameter der process-Methode werden ebenfalls nicht genutzt (all_props, key)
