Added note to TODO file

--- a/TODO
+++ b/TODO
@@ -34,3 +34,6 @@
 # Index
 - Zu viele Attribute im Index. Warum?
   -> weil nicht gefiltert wird...
+
+# Abhängigkeiten
+- Primäre Gruppen? Finden und Mitentfernen!
