added german translations

--- a/backend/src/gosa/backend/data/templates/i18n/domaincomponent/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/domaincomponent/de.json
@@ -1,6 +1,5 @@
 {
-  "DomainComponent": null,
-  "Generic": null,
-  "Domain Component": null,
-  "Name": null
+  "Generic": "Allgemein",
+  "Domain Component": "Domänen-Objekt-Klasse",
+  "Name": "Name"
 }
