--- a/backend/src/gosa/backend/data/templates/i18n/domaincomponentorg/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/domaincomponentorg/de.json
@@ -1,6 +1,6 @@
 {
-  "DomainComponentOrg": null,
-  "Domain component/organization": null,
-  "Generic": null,
-  "Name": null
+  "DomainComponentOrg": "Domänen-Objekt-Klasse/Organisation",
+  "Domain component/organization": "Domänen-Objekt-Klasse/Organisation",
+  "Generic": "Allgemein",
+  "Name": "Name"
 }
