--- a/backend/src/gosa/backend/data/templates/i18n/organization/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/organization/de.json
@@ -1,5 +1,5 @@
 {
-  "Organization": null,
-  "Generic": null,
-  "Name": null
+  "Organization": "Organisation",
+  "Generic": "Allgemein",
+  "Name": "Name" 
 }
