--- a/backend/src/gosa/backend/data/templates/i18n/samba-ws/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/samba-ws/de.json
@@ -1,10 +1,10 @@
 {
-  "Description": null,
-  "Windows Workstation": null,
-  "System ID": null,
-  "Display Name": null,
-  "Domain": null,
-  "Generic": null,
-  "Machine Account": null,
-  "SID": null
+  "Description": "Beschreibung",
+  "Windows Workstation": "Windows Arbeitsplätze",
+  "System ID": "System-ID",
+  "Display Name": "Anzeigename",
+  "Domain": "Domäne",
+  "Generic": "Allgemein",
+  "Machine Account": "Maschinen-Konto",
+  "SID": "SID" 
 }
