--- a/backend/src/gosa/backend/data/templates/i18n/user-posix/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-posix/de.json
@@ -1,14 +1,14 @@
 {
-  "GECOS": null,
-  "User ID": null,
-  "Automatic UID/GID numbers": null,
-  "Automatic GECOS": null,
-  "POSIX": null,
-  "Description": null,
-  "Generic POSIX settings": null,
-  "Login shell": null,
-  "dit group membership": null,
-  "Group mempership": null,
-  "Group ID": null,
-  "Name": null
+  "GECOS": "GECOS",
+  "User ID": "Benutzer-ID",
+  "Automatic UID/GID numbers": "Automatische UID-/GID-Nummern",
+  "Automatic GECOS": "Automatischer GECOS",
+  "POSIX": "POSIX",
+  "Description": "Beschreibung",
+  "Generic POSIX settings": "Allgemeine POSIX-Einstellungen",
+  "Login shell": "Anmelde-Interpreter",
+  "Edit group membership": "Gruppenzugehörigkeit bearbeiten",
+  "Group mempership": "Gruppenmitgliedschaft",
+  "Group ID": "Gruppen-ID",
+  "Name": "Name" 
 }
