--- a/backend/src/gosa/backend/data/templates/i18n/user-samba-ts/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-samba-ts/de.json
@@ -1,20 +1,20 @@
 {
-  "Connect client drives at log on": null,
-  "Connect client printer at log on": null,
-  "Disconnection time": null,
-  "Generic": null,
-  "Inherit client configuration": null,
-  "Reconnect if disconnected": null,
-  "Initial program": null,
-  "Connection time limit": null,
-  "Default to main client printer": null,
-  "Allow login on terminal server": null,
-  "Connection": null,
-  "On broken or timed out": null,
-  "Home directory": null,
-  "Working directory": null,
-  "Profile path": null,
-  "Samba terminal server": null,
-  "IDLE time limit": null,
-  "Shadowing": null
+  "Connect client drives at log on": "Client-Laufwerke beim Anmelden verbinden",
+  "Connect client printer at log on": "Client-Drucker beim Anmelden verbinden",
+  "Disconnection time": "Trennzeitbeschränkung",
+  "Generic": "Allgemein",
+  "Inherit client configuration": "Client-Konfiguration übernehmen",
+  "Reconnect if disconnected": "Wiederherstellen falls unterbrochen",
+  "Initial program": "Startprogramm",
+  "Connection time limit": "Verbindungzeitbeschränkung",
+  "Default to main client printer": "Standard-Drucker vom Client wählen",
+  "Allow login on terminal server": "Anmeldung am Terminalserver zulassen",
+  "Connection": "Verbindung",
+  "On broken or timed out": "Bei Trennung oder abgelaufenem Zeitlimit",
+  "Home directory": "Benutzerverzeichnis",
+  "Working directory": "Arbeitsverzeichnis",
+  "Profile path": "Profil-Pfad",
+  "Samba terminal server": "Samba-Terminalserver",
+  "IDLE time limit": "Leerlaufzeitbeschränkung",
+  "Shadowing": "Spiegeln" 
 }
