--- a/backend/src/gosa/backend/data/templates/i18n/user-samba/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-samba/de.json
@@ -1,27 +1,27 @@
 {
-  "Common": null,
+  "Common": "Gesamt",
   "Date and time when the user should be logged of the workstation": null,
-  "Failed login attempts": null,
-  "Date of last failed login": null,
-  "Access options": null,
-  "SID": null,
-  "Forced logoff time": null,
-  "Home directory": null,
-  "Choose the primary group": null,
-  "Profile path": null,
-  "Domain": null,
-  "Number of failed login attempts": null,
-  "Last logout": null,
-  "Last login": null,
-  "Show policy": null,
-  "Last password change": null,
-  "Logon script": null,
-  "User workstations": null,
-  "Logon hours": null,
-  "Password change required after": null,
-  "Description": null,
-  "Login options": null,
-  "Primary group": null,
-  "Samba": null,
-  "Name": null
+  "Failed login attempts": "Fehlgeschlagene Anmeldeversuche",
+  "Date of last failed login": "Letzte Fehlanmeldung",
+  "Access options": "Zugriffsoptionen",
+  "SID": "SID",
+  "Forced logoff time": "Erzwungene Abmeldezeit",
+  "Home directory": "Benutzerverzeichnis",
+  "Choose the primary group": "Primäre Gruppe wählen",
+  "Profile path": "Profil-Pfad",
+  "Domain": "Domäne",
+  "Number of failed login attempts": "Anzahl der Fehlanmeldungen",
+  "Last logout": "Letzte Abmeldung",
+  "Last login": "Letzte Anmeldung",
+  "Show policy": "Richtlinie anzeigen",
+  "Last password change": "Letzte Passwortänderung",
+  "Logon script": "Anmeldeskript",
+  "User workstations": "Benutzerarbeitsstationen",
+  "Logon hours": "Anmeldezeiten",
+  "Password change required after": "Passwordänderung erforderlich nach",
+  "Description": "Beschreibung",
+  "Login options": "Anmeldeoptionen",
+  "Primary group": "Primäre Gruppe",
+  "Samba": "Samba",
+  "Name": "Name"
 }
