--- a/backend/src/gosa/backend/data/templates/i18n/user-shadow/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-shadow/de.json
@@ -1,15 +1,15 @@
 {
-  "Options": null,
-  "Minimum password age": null,
-  "Maximum password age": null,
-  "Password expires on": null,
+  "Options": "Optionen",
+  "Minimum password age": "Minimales Passwort-Alter",
+  "Maximum password age": "Maximales Passwort-Alter",
+  "Password expires on": "Passwort verfällt am",
   "Specifices the minimum number of days required between password changes.": null,
-  "Last password modification": null,
+  "Last password modification": "Letzte Passwortänderung",
   "Specifies the maximum number of days the password is valid.": null,
-  "Inactivity before account is disabled": null,
-  "Shadow": null,
-  "Password expiry": null,
+  "Inactivity before account is disabled": "Inaktivität bevor das Konto deaktiviert wird",
+  "Shadow": "Shadow",
+  "Password expiry": "Passwort-Ablauf",
   "Specifies the number of days of inactivity allowed for the specified user.": null,
-  "Warn berfore password expires": null,
+  "Warn berfore password expires": "Warnen vor Ablauf des Passwortes",
   "Specifies the number of days before the password expires that the user is warned.": null
 }
