--- a/backend/src/gosa/backend/data/templates/i18n/user/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user/de.json
@@ -3,7 +3,7 @@
   "Surname": "Nachname",
   "Personal": "Personalien",
   "Address": "Adresse",
-  "Homepage": null,
+  "Homepage": "Internetseite",
   "Title": "Titel",
   "Given name": "Vorname",
   "Phone": "Telefon",
