--- a/backend/src/gosa/backend/data/templates/i18n/user-organizational/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-organizational/de.json
@@ -1,22 +1,22 @@
 {
-  "Mobile phone": null,
-  "Choose a manager": null,
-  "Fax": null,
-  "Room no.": null,
-  "Phone": null,
-  "Manager": null,
-  "Address": null,
-  "Organization": null,
-  "Employee no.": null,
-  "Deparment no.": null,
-  "Organizational information": null,
-  "Contact information": null,
-  "State": null,
-  "Organizational": null,
-  "Unit": null,
-  "Login ID": null,
-  "Employee type": null,
-  "Pager": null,
-  "Location": null,
-  "Name": null
+  "Mobile phone": "Mobiltelefon",
+  "Choose a manager": "Verwalter auswählen",
+  "Fax": "FAX",
+  "Room no.": "Zimmernr.",
+  "Phone": "Telefon",
+  "Manager": "Verwalter",
+  "Address": "Adresse",
+  "Organization": "Organisation",
+  "Employee no.": "Angestellten-Nr.",
+  "Deparment no.": "Abteilungsnur.",
+  "Organizational information": "Organisatorische-Informationen",
+  "Contact information": "Kontakt-Informationen",
+  "State": "Bundesland",
+  "Organizational": "Organisation",
+  "Unit": "Einheit",
+  "Login ID": "Anmelde ID",
+  "Employee type": "Mitarbeiter-Typ",
+  "Pager": "Pager",
+  "Location": "Ort",
+  "Name": "Name" 
 }
