added missing translations

--- a/backend/src/gosa/backend/data/templates/i18n/trustaccount/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/trustaccount/de.json
@@ -3,6 +3,6 @@
   "Description": "Beschreibung",
   "Name": "Name",
   "Mode": "Modus",
-  "Edit trusted hosts": null,
+  "Edit trusted hosts": "Vertrauenswürdige Gegenstellen bearbeiten",
   "Trust account": "Konto vertrauen" 
 }
