--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 - Zu viele Attribute im Index. Warum?
   -> Weil nicht gefiltert wird. Zu indizierende Attribute vorher ermitteln.
 - Was passiert wenn z.B. eine Gruppenmitgliedschaft hinzugefügt wird?
+- Event bei vollständigem Index-Lauf / Aktualisierung senden
 
 # Rückwärtsbeziehungen zu Objektdefinitionen erlauben
 - Wird ein Plugin installiert, welches z.B. Benutzer erweitert, so sollte es die
@@ -31,6 +32,9 @@
 - Objektanlage hinzufügen
 - Capture rewrite bzgl. aktueller Technik
 - RPC-Locked sollte nicht in ein "nicht genügend Berechtigungen" resultieren, sondern den Fehler holen und anzeigen
+- Objekt-Aktualisieren falls es momentan geöffnet ist und eine Modifikation vom Backend gemeldet wurde
+- Bei Index-Aktualisierung eventuell offene Suche wiederholen
+- Suche wiederholen wenn ein betroffenes Objekt modifiziert wurde?
 
 # Filter (gosa.backend.objects.filter + gosa.backend.plugins.*filter)
 - Konstruktor wird ein Object übergeben, dieses wird zwar dem Parent-Konstruktor übergeben, welcher wiederum nichts damit macht
