--- a/TODO
+++ b/TODO
@@ -74,3 +74,6 @@ Test dazu:
 - self.__base_mode wird nur initial gesetzt. Wird über den Proxy ein Objekt angelegt (self.__base_mode = "create"), dieses dann commited
   danach ein move oder andere Operationen ausgeführt und dann wieder commited führt der "create"-mode zu Fehlern (im self.__base.check()).
   Sollte das nach dem ersten commit auf "update" geändert werden?
+
+# ObjectIndex
+ - __backend_change_processor mit changeType = "modify" und unbekannter dn Z. 295 ff. unreachable code (steigt schon beim get_object aus)
